--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -11,6 +11,7 @@
 
     <LinearLayout
         android:id="@+id/quiz_question"
+        android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
@@ -19,7 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q1."
+            android:textStyle="bold"
             android:visibility="invisible"
+            android:textColor="#000000"
             android:textSize="20dp"
             android:id="@+id/question_number"
             android:layout_marginRight="10dp"
@@ -28,6 +31,8 @@
         <TextView
             android:layout_width="match_parent"
             android:visibility="invisible"
+            android:textStyle="bold"
+            android:textColor="#000000"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ridibatang"
             android:textSize="20dp"
@@ -40,7 +45,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_margin = "20dp"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:visibility="invisible"
         android:id="@+id/recyclerview_quizitem"/>
 
@@ -52,9 +57,14 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="이전 문제"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
             android:visibility="invisible"
+            android:background="@drawable/round_button"
+            android:backgroundTintMode="multiply"
+            android:backgroundTint="@color/colorAccent"
             android:fontFamily="@font/ridibatang"
             android:id="@+id/button_previous_question"
             android:layout_marginRight="20dp"
@@ -62,18 +72,28 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="퀴즈 시작"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
             android:fontFamily="@font/ridibatang"
             android:id="@+id/button_start_quiz"
+            android:background="@drawable/round_button"
+            android:backgroundTintMode="multiply"
+            android:backgroundTint="@color/colorAccent"
             />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="다음 문제"
             android:visibility="invisible"
             android:layout_marginLeft="20dp"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:background="@drawable/round_button"
+            android:backgroundTintMode="multiply"
+            android:backgroundTint="@color/colorAccent"
             android:fontFamily="@font/ridibatang"
             android:id="@+id/button_next_question"
             />
