--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,24 +9,21 @@
 
     <FrameLayout
         android:layout_marginTop="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="200dp"
+        android:layout_height="200dp">
 
         <ImageButton
+            android:elevation="10dp"
+            android:layout_gravity="center"
             android:id="@+id/button_call"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:src="@drawable/red_button"
+            android:backgroundTintMode="multiply"
+            android:backgroundTint="@android:color/background_light"
             android:background="@drawable/round_button"
             />
 
-        <TextView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CALL"
-            android:textColor="#000000"
-            android:textSize="20dp"/>
 
 
     </FrameLayout>
