--- a/app/src/main/res/layout/fragment_quiz_score_page.xml
+++ b/app/src/main/res/layout/fragment_quiz_score_page.xml
@@ -1,95 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal">
-
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/stamp" />
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_margin="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-
-        <ImageView
-            android:layout_marginRight="4dp"
-            android:id="@+id/star1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/star2"
-            android:layout_marginRight="4dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/star3"
-            android:layout_marginRight="4dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/star4"
-            android:layout_marginRight="4dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/star"/>
-        <ImageView
-            android:id="@+id/star5"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/star"/>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/score"
-        android:text="100점"
-        android:textColor="@android:color/black"
-        android:textSize="50dp"
-        android:fontFamily="@font/ridibatang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:id="@+id/comment"
-        android:textColor="#383A3f"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:fontFamily="@font/ridibatang"
-        android:textStyle="italic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="500dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:background="@drawable/background_certificate">
 
-    <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp">
+        <TextView
+            android:layout_marginTop="133dp"
+            android:id="@+id/comment"
+            android:textColor="#383A3f"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:fontFamily="@font/ridibatang"
+            android:textStyle="italic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/retryBtn"
+        <TextView
+            android:layout_marginTop="7dp"
+            android:text="100점"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/score"
+            android:textColor="@android:color/black"
+            android:textSize="50dp"
+            android:fontFamily="@font/ridibatang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:fontFamily="@font/ridibatang"
-            android:text="재도전" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal">
 
-        <Button
-            android:id="@+id/homeBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:fontFamily="@font/ridibatang"
-            android:text="홈으로" />
+            <ImageView
+                android:layout_marginRight="4dp"
+                android:id="@+id/star1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/star"/>
+            <ImageView
+                android:id="@+id/star2"
+                android:layout_marginRight="4dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/star"/>
+            <ImageView
+                android:id="@+id/star3"
+                android:layout_marginRight="4dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/star"/>
+            <ImageView
+                android:id="@+id/star4"
+                android:layout_marginRight="4dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/star"/>
+            <ImageView
+                android:id="@+id/star5"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/star"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:layout_marginEnd="70dp"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="30dp">
+
+            <Button
+                android:id="@+id/retryBtn"
+                android:elevation="20dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:fontFamily="@font/ridibatang"
+                android:text="재도전"
+                android:textColor="#FFFFFF"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/round_button"
+                android:backgroundTintMode = "multiply"
+                android:backgroundTint="#78684d"/>
+
+            <Button
+                android:id="@+id/homeBtn"
+                android:elevation="20dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTintMode = "multiply"
+                android:fontFamily="@font/ridibatang"
+                android:backgroundTint="#78684d"
+                android:background="@drawable/round_button"
+                android:text="홈으로" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
