--- a/app/src/main/res/drawable/shape_stroke_layout.xml
+++ b/app/src/main/res/drawable/shape_stroke_layout.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorGray">
+        android:color="@color/colorAccent">
     </stroke>
 
 </shape>
