--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -5,5 +5,5 @@
     <item
         android:id="@+id/save"
         app:showAsAction="ifRoom"
-        android:title="@string/save"/>
+        android:title="저장"/>
 </menu>
