--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -30,6 +30,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/shape_solid_layout"
+            android:textColor="@color/colorPrimaryDark"
             android:text="편집" />
     </LinearLayout>
 
