--- a/app/src/main/res/layout/fragment_info_page.xml
+++ b/app/src/main/res/layout/fragment_info_page.xml
@@ -2,10 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@drawable/study_background"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -14,12 +19,63 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <TextView
-        android:id="@+id/comment"
-        android:layout_marginTop="20dp"
-        android:textSize="18dp"
-        android:layout_marginLeft="20dp"
+    <LinearLayout
+        android:id="@+id/info_tip"
+        android:layout_gravity="center"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:text="ssssdflsdkijfalsjf;elfjsldk"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/textbox_sketchbook">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="30dp"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="50dp">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/lightbulb"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tip!"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/colorPrimaryDark"/>
+
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarFadeDuration="0"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="40dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/comment"
+                android:textSize="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:lineSpacingMultiplier="1.3"
+                android:fontFamily="@font/ridibatang"
+                android:layout_width="match_parent"
+                android:text="ssssdflsdkijfalsjf;elfjsldk"
+                android:layout_height="wrap_content"/>
+
+        </ScrollView>
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
