--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,63 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:gravity="bottom"
+    app:umanoDragView="@id/map_container"
+    app:umanoPanelHeight="50dp"
+    app:umanoShadowHeight="10dp">
+
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="@color/colorPrimaryDark">
 
     <FrameLayout
-        android:layout_marginTop="50dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="119에"
+            android:textSize="80sp"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="right"
+            android:text="신고하기"
+            android:textSize="80sp" />
 
         <ImageButton
-            android:elevation="10dp"
-            android:layout_gravity="center"
             android:id="@+id/button_call"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:src="@drawable/red_button"
-            android:backgroundTintMode="multiply"
-            android:backgroundTint="@android:color/background_light"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="130dp"
             android:background="@drawable/round_button"
-            />
+            android:backgroundTint="@android:color/background_light"
+            android:backgroundTintMode="multiply"
+            android:elevation="10dp"
+            android:src="@drawable/red_button" />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="300dp"
+            android:textSize="70sp"
+            android:text="AED" />
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="350dp"
+            android:gravity="right"
+            android:text="자동심장제세동기"
+            android:textSize="50sp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="400dp"
+            android:textSize="70sp"
+            android:text="찾기" />
 
     </FrameLayout>
 
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/button_findAED"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AED 찾기"/>
+    </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/map_container"
         android:layout_width="match_parent"
-        android:visibility="invisible"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/shape_round_dark_layout">
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="com.google.android.gms.maps.MapFragment"
-            />
+    <Button
+        android:id="@+id/button_findAED"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:background="@android:color/transparent"
+        android:text="AED 찾기" />
 
-
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
