--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -193,7 +193,7 @@
             android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center|fill_horizontal"
+            android:layout_gravity="bottom|right"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
             android:background="#00FFFFFF"
